# psplash-lvgl

./: .gitlab-ci.yml  CHANGELOG.md  README.md  config.c  config.h  config.ini  meson.build  meta-kls_2.3.1.cross  psplash-lvgl.c
data/: config.ini  config.ini.in
subprojects/: .gitignore  libconfig.wrap  lodepng.wrap  lv_drivers.wrap  lv_lib_png.wrap  lvgl.wrap
subprojects/packagefiles/libconfig/: meson.build
subprojects/packagefiles/lodepng/: meson.build
subprojects/packagefiles/lv_drivers/: lv_drv_conf_drm.h  lv_drv_conf_drm_libinput.h  lv_drv_conf_fb.h  lv_drv_conf_sdl2.h  meson.build  meson_options.txt
subprojects/packagefiles/lv_drivers/display/: drm.c  fbdev.c
subprojects/packagefiles/lv_lib_png/: meson.build
subprojects/packagefiles/lvgl/: lv_conf.h  lv_conf.h.in  meson.build  meson_options.txt
